Defined a menu item to view in a list in MenuItem and defined an Adapter called MenuItemsAdapter which encapsulates the menu items in the view in a list (ListView)